accomodation mobile layout fix

--- a/content/css/_general.scss
+++ b/content/css/_general.scss
@@ -110,9 +110,9 @@
   }
 }
 
-#map, .map {
+.map {
   height: 500px;
-  margin: 55px 0 25px 0;
+  margin: 35px 0 25px 0;
 }
 
 .tickets-holder {
